<resources>
    <string name="app_name">Design Template</string>
    <string name="menu_setting">Settings</string>
    <string name="action_home">Home</string>
    <string name="slogan">Drive | Ride | Save</string>

    <string name="google_maps_key">AIzaSyCx5-kZK-SNeTySaPoK_nI2Sm13NWea9Uc</string>
    <string name="font_roboto">robboto</string>
    <string name="label_enter_the_verification_code">Enter verification code sent to your phone</string>
    <string name="hint_enter_your_number">Phone Number</string>
    <string name="route_details">Your Route Details</string>
    <string name="smile">Smile Please!</string>
    <string name="every">A Profile Picture improves trust and helps in identification while sharing a ride</string>
    <string name="upload">Upload</string>
    <string name="action_chat">Chats</string>
    <string name="action_profile">Profile</string>
    <string name="action_exit">Log Out</string>
    <string name="action_share">Share App</string>
    <string name="action_help">Help</string>
    <string name="legal">Legal Consent</string>
    <string name="legal_infor">I understand that the information provide by me may be used by Saafiri, or its affiliates, authbridge research services private limited or its affiliates (being a third party agency appointed by Saafiri), or any third party appointed by Saafiri from time to time, to verify and validate the information I have provided as necessary background Checks. I understand that the third party agency appointed by Saafiri may obtain Information it deems appropriate from various sources including, but not limited to, current and past employers, Criminal conviction records, educational records, professional and personal references and other verifying sources / authorities.</string>
    <string name="message_please_Accept_terms_and_conditions">Please Accept the terms and conditions.</string>
    <string name="btn_refresh">Refresh</string>
    <string name="planning_to_go">Hey, Where are you planning to Go!</string>
    <string name="where_to_pick_you">Where to pick you from</string>
    <string name="which_date">Which Date</string>
    <string name="what_time">What Time</string>
    <string name="password_not_match">Password does not match</string>
    <string name="error_occured">An error occurred, please try again.</string>
    <string name="check_all_fields">Check entered information</string>
    <string name="enter_car_details">Enter your car details</string>
    <string name="submit">Submit</string>
    <string name="label_vehicle_registration">Vehicle Registration</string>
    <string name="label_driver_license">Driver Licence</string>
    <string name="label_please_upload_your_documents">Please Upload your personal Documents and Vehicle Documents</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="booki">Car Pooling</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="read_it_together">Read it together</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Facebook</string>
    <string name="forget_password">Forgot Password.?</string>
    <string name="pdoexception">Fatal error: Uncaught exception \'PDOException\'</string>
    <string name="ride">Post Ride</string>
    <string name="action_rides">My Rides</string>
    <string name="pay">My payments</string>
    <string name="action_vehicle">My Vehicle</string>
    <string name="action_contribute">My Contribution</string>
    <string name="help">Help</string>
    <string name="action_settings">Settings</string>
    <string name="action_chathere">Chat</string>
    <string name="action_groups">Groups</string>
    <string name="action_offer">Offers</string>
    <string name="action_Refer"><![CDATA[Refer & Reward]]></string>
    <string name="action_logout">Log Out</string>
    <string name="seat_no">Seat</string>
    <string name="where_to_pick_passenger">Where to pick Client</string>
    <string name="name">Kiprotich Japheth</string>
    <string name="phone">254724743788</string>
    <string name="select_seats">Select the number of seats to book for the ride</string>
    <string name="selection">* selection is not for seat position</string>
    <string name="confirm">Confirm</string>
    <string name="action_ride">My Rides</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_find_ride">Find a Ride</string>
    <string name="reviews">(15 Reviews)</string>
    <string name="start_time">12:45PM</string>
    <string name="start_location">Roysambu</string>
    <string name="seats">3 Seats</string>
    <string name="ac">AC</string>
    <string name="charge">$ 75</string>
    <string name="request_ride">Request Ride</string>
    <string name="item_empty">Nothing to Display</string>
    <string name="action_rider_profile">Rider Profile</string>
    <string name="home_office">Home-Office</string>
    <string name="capacity">Vehicle Capacity</string>
    <string name="seat_three">3 Seats</string>
    <string name="air_condition">Air Condition</string>
    <string name="ac_available">AC available</string>
    <string name="min_fare">Min Fare</string>
    <string name="dollar">$ 75</string>
    <string name="message">Message</string>
    <string name="confirm_ride_request">Confirm Ride Request</string>
    <string name="pick_up_location">Pickup Location</string>
    <string name="roysambu">Roysambu</string>
    <string name="drop_location">Drop Location</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="date">Date</string>
    <string name="fifteen">15th Sept 2019</string>
    <string name="time">Time</string>
    <string name="twelve">Between 12:30pm to 13:10pm</string>
    <string name="fare"><![CDATA[Fare & Seat Confirmation]]></string>
    <string name="estf">Est Fare</string>
    <string name="fare_amount">$ 80</string>
    <string name="confirm_request">Confirm Request</string>
    <string name="confirm_title">Confirm Ride Requets?</string>
    <string name="chat">Chat</string>
    <string name="action_payments">Payments</string>
    <string name="action_rewards">Rewards</string>
    <string name="vehicles">Vehicles</string>
    <string name="wallet">Wallet</string>
    <string name="label_help">Help</string>
    <string name="expt">Expected Time</string>
    <string name="twelveten">12:10</string>
    <string name="pending">Pending</string>
    <string name="hint_phone_number">Enter Phone</string>
    <string name="hint_verification_code">Enter Code</string>
    <string name="start_phone_auth">Sign In</string>
    <string name="verify_phone_auth">Proceed</string>
    <string name="resend_phone_auth">Resend Code</string>
    <string name="status_code_sent">Code Sent !</string>
    <string name="status_verification_failed">Failed to verify</string>
    <string name="status_sign_in_failed">Signin Failed</string>
    <string name="instant_validation">Instant validation</string>
    <string name="signed_in">Logged in !</string>
    <string name="signed_out"><![CDATA[You are not logged in !</]]></string>
    <string name="registration">Registration</string>
    <string name="code">+254</string>
    <string name="or">Or Signin using </string>
    <string name="email_phone">Phone Number</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="permission_rationale_location">Access to the location service is required to reinstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="permission_required_toast">Location permission is required.</string>
    <string name="location_permission_denied">Permission Denied</string>
    <string name="action_notifications">Notifications</string>
    <string name="car_details">Car Details</string>
    <string name="home">Home</string>
    <string name="menu_refresh">Refresh</string>
    <string name="select_seats_offer">Select number of seats to offer for ride</string>
    <string name="login_bottom_text">Create an Account</string>
    <string name="start_phone_auth_button">Verify Phone</string>
</resources>
